# vereinsverwaltung

./: .gitignore  Cargo.toml  Containerfile  README.md  db.sql
.github/workflows/: build-and-push-image.yml
frontend/: .prettierrc  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/src/: app.css
frontend/src/lib/: config.ts  crudRepo.svelte.ts  util.ts
frontend/src/lib/api/: file.ts  login.ts  member.ts  payment.ts
frontend/src/lib/components/: accordion.svelte  button.svelte  center.svelte  heading.svelte  input.svelte  mdWrapper.svelte  modalProvider.svelte
frontend/src/lib/stores/: authStore.svelte.ts  modalStore.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte  login.svelte
frontend/src/routes/addmember/: +page.svelte
frontend/src/routes/editmember/: +page.svelte  files.svelte  infoform.svelte  paymentform.svelte
frontend/src/routes/logout/: +page.svelte
migrations/: 0000_initial.sql  0001_additional_data.sql  0002_member_deleted_field.sql
src/: auth.rs  error.rs  file.rs  main.rs  member.rs  payment.rs
