[package]
name = "vereinsverwaltung"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
axum_typed_multipart = "0.11.0"
chrono = "0.4.26"
dotenv = "0.15.0"
include_dir = "0.7.3"
jwt-simple = { version = "0.12.9", features = ["pure-rust"], default-features = false }
mime_guess = "2.0.4"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
